--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,8 @@
   "version": 2,
   "crons": [
     {
-      "path": "/api/cron/rate?token=30158858Jm.",
-      "schedule": "0 */6 * * *"
+      "path": "/api/cron/rate?token=30158858Jm",
+      "schedule": "0 9 * * *"
     }
   ]
 }
