--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "private": true,
   "type": "module",
   "dependencies": {
-    "@supabase/supabase-js": "^2.49.1"
+    "@supabase/supabase-js": "^2.49.1",
+    "jsonwebtoken": "^9.0.2"
   }
-  "dependencies": {
-  "jsonwebtoken": "^9.0.2"
-}
 }
