--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,6 @@
 {
   "version": 2,
   "crons": [
-    {
-      "path": "/api/cron/rate?token=30158858Jm",
-      "schedule": "0 9 * * *"
-    }
+    {"path":"/api/cron/rate?token=30158858Jm","schedule":"*/30 * * * *"}
   ]
 }
