--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
-  "version": 2,
-  "crons": [
-    {"path":"/api/cron/rate?token=30158858Jm.","schedule":"*/30 * * * *"}
-  ]
+"version": 2,
+"crons": [
+{
+"path": "/api/cron/rate?token=30158858Jm",
+"schedule": "0 9 * * *"
+}
+]
 }
